--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
+    "db:generate": "prisma generate --schema=prisma/schema.prisma && prisma generate --schema=prisma/schema-hospital.prisma && prisma generate --schema=prisma/schema-ems.prisma",
+    "db:push": "prisma db push --schema=prisma/schema.prisma && prisma db push --schema=prisma/schema-hospital.prisma && prisma db push --schema=prisma/schema-ems.prisma",
     "db:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
