--- a/backend/env.example
+++ b/backend/env.example
@@ -16,6 +16,9 @@ SMTP_PORT=587
 SMTP_USER="your-email@gmail.com"
 SMTP_PASS="your-app-password"
 
+# Frontend URL (for email links)
+FRONTEND_URL="http://localhost:3000"
+
 # SMS Configuration (for future Twilio integration)
 TWILIO_ACCOUNT_SID=""
 TWILIO_AUTH_TOKEN=""
