feat: Add database setup script for production deployment
- Add setup-db.js script to handle database schema creation
- Update package.json with start:prod command
- Configure Render to run database setup on startup
- Fixes PrismaClientInitializationError in production

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "setup-db": "node setup-db.js",
+    "start:prod": "npm run setup-db && node dist/index.js",
     "db:generate": "prisma generate --schema=prisma/schema.prisma && prisma generate --schema=prisma/schema-hospital.prisma && prisma generate --schema=prisma/schema-ems.prisma",
     "db:push": "prisma db push --schema=prisma/schema.prisma && prisma db push --schema=prisma/schema-hospital.prisma && prisma db push --schema=prisma/schema-ems.prisma",
     "db:seed": "ts-node prisma/seed.ts"
