--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,8 @@
     "start": "node dist/index.js",
     "setup-db": "node setup-db.js",
     "start:prod": "npm run setup-db && node dist/index.js",
-    "db:generate": "prisma generate --schema=prisma/schema.prisma && prisma generate --schema=prisma/schema-hospital.prisma && prisma generate --schema=prisma/schema-ems.prisma",
-    "db:push": "prisma db push --schema=prisma/schema.prisma && prisma db push --schema=prisma/schema-hospital.prisma && prisma db push --schema=prisma/schema-ems.prisma",
+    "db:generate": "prisma generate --schema=prisma/schema-center.prisma && prisma generate --schema=prisma/schema-hospital.prisma && prisma generate --schema=prisma/schema-ems.prisma",
+    "db:push": "prisma db push --schema=prisma/schema-center.prisma && prisma db push --schema=prisma/schema-hospital.prisma && prisma db push --schema=prisma/schema-ems.prisma",
     "db:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
