--- a/backend/production.env
+++ b/backend/production.env
@@ -1,5 +1,5 @@
 # Production Environment Variables for Render
-DATABASE_URL="postgresql://tcc_production_db_user:kduvfSGb4YrhCQGBR0h40pcXi9bb9Ij9@dpg-d2u62j3e5dus73eeo4l0-a.oregon-postgres.render.com:5432/tcc_production_db?sslmode=require&connect_timeout=60&pool_timeout=60&idle_timeout=60"
+DATABASE_URL="postgresql://tcc_production_db_user:kduvfSGb4YrhCQGBR0h40pcXi9bb9Ij9@dpg-d2u62j3e5dus73eeo4l0-a.oregon-postgres.render.com:5432/tcc_production_db?sslmode=require"
 
 # JWT Secret
 JWT_SECRET="tcc-super-secret-jwt-key-2024-production"
