--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "prisma generate && tsc",
-    "build:prod": "prisma generate --schema=prisma/schema-production.prisma && tsc",
+    "build:prod": "prisma generate --schema=prisma/schema-production.prisma && tsc --project tsconfig.production.json",
     "start": "node dist/production-index.js",
     "start:prod": "node dist/production-index.js",
     "setup-db": "node setup-db.js",
