--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
@@ -29,6 +30,7 @@
     "@types/nodemailer": "^6.4.19",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
