--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@sendgrid/mail": "^8.1.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.17",
@@ -39,6 +40,7 @@
     "nodemailer": "^6.10.1",
     "pg": "^8.16.3",
     "prisma": "^5.7.1",
+    "twilio": "^5.10.0",
     "typescript": "^5.3.3",
     "zod": "^3.22.4"
   },
