--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,11 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "esbuild": "^0.19.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
-    "rollup": "^3.29.4",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
