--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,8 @@ services:
     env: node
     plan: starter
     region: oregon
-    buildCommand: cd backend && npm install && npm run build:prod
-    startCommand: cd backend && npm start
+    buildCommand: npm install && npm run build:prod
+    startCommand: npm start
     rootDir: backend
     envVars:
       - key: NODE_ENV
