--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "dev:safe": "npm run dev:health && npm run dev:clean",
     "build": "npm run build --workspace=frontend && npm run build --workspace=backend",
     "start": "npm run start --workspace=backend",
-    "test": "npm run test --workspace=backend && npm run test --workspace=frontend"
+    "test": "npm run test --workspace=backend && npm run test --workspace=frontend",
+    "contract:test:dev": "API_URL=http://localhost:5001 node test-api-simple.js",
+    "contract:test:prod": "API_URL=https://vercel-bqfo02a73-chuck-ferrells-projects.vercel.app node test-api-simple.js",
+    "monitor:dev": "API_URL=http://localhost:5001 INTERVAL=60 bash scripts/monitor-feeds.sh",
+    "monitor:prod": "API_URL=https://vercel-bqfo02a73-chuck-ferrells-projects.vercel.app INTERVAL=60 bash scripts/monitor-feeds.sh"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
