--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,16 @@
-{"projectId":"prj_CyylRQvVV1mn3ONI1OdVZogsmwkO","orgId":"team_PFYsq9R2ooy5jeY0KWf6r8hz","projectName":"vercel-api"}
+{
+  "projectId": "prj_CyylRQvVV1mn3ONI1OdVZogsmwkO",
+  "orgId": "team_PFYsq9R2ooy5jeY0KWf6r8hz",
+  "projectName": "vercel-api",
+  "settings": {
+    "createdAt": 1758476695712,
+    "framework": null,
+    "devCommand": null,
+    "installCommand": null,
+    "buildCommand": null,
+    "outputDirectory": null,
+    "rootDirectory": null,
+    "directoryListing": false,
+    "nodeVersion": "22.x"
+  }
+}
