--- a/.vercelignore
+++ b/.vercelignore
@@ -1,9 +1,5 @@
 node_modules
-frontend/node_modules
-backend/node_modules
+.git
 *.log
+.env*
 .DS_Store
-.env
-.env.local
-.env.production
-.env.development
