--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "export ROLLUP_SKIP_NODEJS_NATIVE=1 ROLLUP_USE_NODEJS_NATIVE=0 npm_config_optional=false && npm ci --include=optional && npm run build",
+  "buildCommand": "cd frontend && ROLLUP_SKIP_NODEJS_NATIVE=1 ROLLUP_USE_NODEJS_NATIVE=0 npm ci --include=optional && ROLLUP_SKIP_NODEJS_NATIVE=1 ROLLUP_USE_NODEJS_NATIVE=0 npm run build",
   "outputDirectory": "frontend/dist",
+  "installCommand": "npm ci --include=optional",
+  "framework": null,
   "rewrites": [
     {
       "source": "/(.*)",
