chore: checkpoint - current CORS investigation, same-origin proxy rewrites, backend catch-all; preparing backup

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "https://vercel-bqfo02a73-chuck-ferrells-projects.vercel.app/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
