--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,3 @@
-VITE_API_BASE_URL=https://vercel-9n7wf0kfd-chuck-ferrells-projects.vercel.app
-VITE_API_URL=https://vercel-9n7wf0kfd-chuck-ferrells-projects.vercel.app
+# VITE_API_BASE_URL=https://vercel-9n7wf0kfd-chuck-ferrells-projects.vercel.app
+# VITE_API_URL=https://vercel-9n7wf0kfd-chuck-ferrells-projects.vercel.app
+# Commented out to use same-origin configuration for production
