--- a/backend/.env.backup.phase1
+++ b/backend/.env.backup.phase1
@@ -1,5 +1,7 @@
-# Single Database URL
-DATABASE_URL="postgresql://scooper@localhost:5432/medport_ems?schema=public"
+# Database URLs (3 siloed databases)
+DATABASE_URL_HOSPITAL="postgresql://scooper@localhost:5432/medport_hospital?schema=public"
+DATABASE_URL_EMS="postgresql://scooper@localhost:5432/medport_ems?schema=public"
+DATABASE_URL_CENTER="postgresql://scooper@localhost:5432/medport_center?schema=public"
 
 # JWT Secret
 JWT_SECRET="your-super-secret-jwt-key-here"
