fix: consolidate database references for single medport_ems database
CRITICAL: Removed all references to old 3-database structure

Changes:
- backend/env.example: Updated to show single DATABASE_URL
- backend/src/routes/backup.ts: Rewritten to use consolidated database only
  - Removed DATABASE_URL_EMS, DATABASE_URL_HOSPITAL, DATABASE_URL_CENTER
  - Now exports all tables from single medport_ems database
  - Includes all user, healthcare, EMS, and trip tables
  - Version bumped to 2.0 to reflect new backup format

Documentation:
- DATABASE_CONSOLIDATION_VERIFICATION.md: Detailed verification report
- VERCEL_DEPLOYMENT_NEXT_STEPS.md: Updated deployment architecture
- vercel_implementation_for_100925.md: Updated progress tracking

Impact:
- Backup functionality now works with Vercel Postgres deployment
- No runtime errors from missing DATABASE_URL_* variables
- Clean separation between dev (localhost) and prod (Vercel)

Preparing for Vercel deployment - All database references consolidated

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,7 +1,6 @@
-# Database URLs (3 siloed databases)
-DATABASE_URL_HOSPITAL="postgresql://username:password@localhost:5432/tcc_hospital?schema=public"
-DATABASE_URL_EMS="postgresql://username:password@localhost:5433/tcc_ems?schema=public"
-DATABASE_URL_CENTER="postgresql://username:password@localhost:5434/tcc_center?schema=public"
+# Single Consolidated Database URL
+# All TCC data (users, trips, agencies, facilities) in one database
+DATABASE_URL="postgresql://username:password@localhost:5432/medport_ems?schema=public"
 
 # JWT Secret
 JWT_SECRET="your-super-secret-jwt-key-here"
