USER VERIFIED: Complete Vercel deployment with authentication fixes
- ✅ Backend deployed to Vercel with all auth endpoints working
- ✅ Database consolidated and properly configured
- ✅ Healthcare and EMS login endpoints fixed
- ✅ Frontend updated to point to new backend
- ✅ All 8 deployment phases completed
- ✅ Production system operational

Authentication endpoints now working:
- Healthcare: test@hospital.com / testpassword
- EMS: test@ems.com / testpassword
- TCC Admin: admin@tcc.com / admin123

Production URLs:
- Frontend: https://traccems.com
- Backend: https://backend-7gq6yna1p-chuck-ferrells-projects.vercel.app

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "dev:safe": "npm run dev:health && npm run dev:clean",
     "build": "prisma generate && tsc",
     "build:prod": "prisma generate --schema=prisma/schema-production.prisma && tsc --project tsconfig.production.json",
+    "postinstall": "prisma generate",
     "start": "node dist/production-index.js",
     "start:prod": "node dist/production-index.js",
     "setup-db": "node setup-db.js",
